Fix variabili d'ambiente e configurazione CORS