@@ -1,5 +1,6 @@
 package it.ultraistinct.ordersmanagement.config.security;
 
+import it.ultraistinct.ordersmanagement.config.JwtProperties;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,23 +10,25 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
 public class BeansConfig {
+
+    private final JwtProperties jwtProperties;
 
     @Bean
     public CorsFilter corsFilter() {
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         final CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Collections.singletonList("corsAllowedOrigins"));
-        config.setAllowedHeaders(Arrays.asList(
+        config.setAllowedOrigins(Collections.singletonList(jwtProperties.getCorsAllowedOrigin()));
+        config.setAllowedHeaders(List.of(
                 "*"
         ));
-        config.setAllowedMethods(Arrays.asList(
+        config.setAllowedMethods(List.of(
                 "*"
         ));
         source.registerCorsConfiguration("/**", config);
